<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="10dp"
    android:gravity="center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/abcImageView"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/abc"
        android:contentDescription="@string/image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/abcTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc_news"
            android:textColor="@color/colorPrimary"
            android:textSize="23dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/typeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:textSize="20sp"
            android:textStyle="italic" />


    </LinearLayout>

</LinearLayout>